# goldmine-mc

./: .gitignore  .luaurc  Cargo.toml  full_session.pcapng
example_mod/: mod.lua
goldmine/: .luaurc  init.lua  registry.lua
goldmine-lib/: Cargo.toml
goldmine-lib/src/: constants.rs  data.rs  error.rs  game_packets.rs  lib.rs  logic.rs  packets.rs  u24.rs
goldmine-lib/src/blocks/: mod.rs
goldmine-lib/src/data/: attachment.rs  chunk.rs  entity.rs  inventory.rs  mod.rs  server_savestate.rs  state.rs
goldmine-lib/src/mod_api/: mod.rs  registry.rs  require.rs
goldmine-lib/src/mod_api/module/: attachment.rs  entity.rs  mod.rs  packet.rs  world.rs
goldmine-lib/src/modded/: mod.rs  module.rs
goldmine-lib/src/protocol/: game_packets.rs  mod.rs  packets.rs  u24.rs
goldmine-lib/src/registry/: api_module.rs  lua_mod.rs  mod.rs  packet_listener.rs
goldmine-lib/src/tasks/: mod.rs  packet_listener.rs
goldmine-server/: Cargo.toml
goldmine-server/src/: main.rs
