[package]
name = "goldmine-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.10", features = ["luau", "vendored", "send", "async", "serialize"] }
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = "0.8"
declio = "0.2.0"
bimap = "0.6.3"