[package]
name = "goldmine-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["luau", "vendored", "send", "async", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
declio = "0.2.0"
bimap = "0.6"
many-to-many = "0.1"
snafu = "0.8"
parking_lot = "0.12"